# Tasker

./: .gitignore  CMakeLists.txt  README.md
assets/: app.html  calendar.css  calendar.html  main_window.css
assets/calendar/: calendar.css  calendar.html  calendar.js  nextMonth.html  prevMonth.html
assets/calendar/js/: calendar.js  fillCalendar.js  fillRemoveSection.js  fillUpcomingEvents.js  getCalendarTitle.js  todayCalendarTitle.js
assets/js/: app.js  editTask.js  newTask.js  sideCard.js
assets/materialize/: materialize.css
assets/my_day/: my_day.css  my_day.html  my_day.js
assets/my_day/js/: listMyDayTasks.js  listTasks.js
assets/tasks/: tasks.css  tasks.html  tasks.js
assets/tasks/js/: listAllTasks.js  tasks.js
cmake/: App.cmake
src/: main.cpp  todo.cpp  todo.hpp
src/database/: database.cpp  database.hpp
src/database/fetch/: db_fetch.cpp  db_fetch.hpp
src/database/insert/: db_insert.cpp  db_insert.hpp
src/database/modify/: db_modify.cpp  db_modify.hpp
src/database/remove/: db_remove.cpp  db_remove.hpp
